--- a/Gmt/templates/views/procedure.hbs
+++ b/Gmt/templates/views/procedure.hbs
@@ -42,9 +42,7 @@
 					</div>
 					<div class="col-lg-5 col-sm-5 col-xs-5 col-md-5">
 						<h3>{{name}}</h3>
-						<button type="button" class="btn btn-primary btn-md raised">Know More</button>
-						<!-- <a href=""><p>Know More</p></a> -->
-						<!-- <button type="button" class="bttn" onclick=location.href="/provider_info/">Know More</button> -->
+						<button type="button" class="btn btn-primary btn-md raised" onclick="location.href='/provider/{{key}}'">Know More</button>
 					</div>
 					<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
 					</div>
@@ -115,7 +113,7 @@
 												{{price}}
 											</div>
 											<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
-												<input class="btn btn-default" type="submit" value="Enquiry" style="background-color:#FF6C6F;color:white">
+												<input class="btn btn-primary btn-md enquiry" type="submit" value="Enquiry" style="">
 											</div>
 										</div>
 									</a>
