--- a/Gmt/public/styles/site.css
+++ b/Gmt/public/styles/site.css
@@ -4941,7 +4941,8 @@ button.close {
   margin-left: 2px; }
 
 .provider-img {
-  padding: 20px; }
+  padding: 20px;
+  border-radius: 8px; }
 
 .provider-info h3 {
   margin-top: 26px;
@@ -4955,13 +4956,13 @@ button.close {
   margin-right: 20px;
   font-family: SourceSansPro-Regular;
   font-size: 14px;
-  padding-bottom: 0px;
-  margin-bottom: 0px; }
-.provider-info .btn-primary.raisedsss {
+  padding-bottom: 0;
+  margin-bottom: 0; }
+.provider-info .btn-primary.providers_btn {
   margin-top: 41px;
   background-color: #ff6c6f;
   border-color: #ff6c6f;
-  box-shadow: 0 4px 0 0 #B24B4D;
+  box-shadow: 0 4px 0 0 #b24b4d;
   margin-bottom: 10px;
   outline: none;
   font-family: SourceSansPro-Semibold;
@@ -5072,7 +5073,7 @@ button.close {
 
 .doc {
   margin-top: 45px;
-  height: 350px;
+  height: 447px;
   padding-bottom: 40px; }
   .doc img {
     width: 180px;
@@ -5114,7 +5115,7 @@ button.close {
       border-radius: 8px;
       padding: 8px 0 0 8px;
       border: 1px solid #ccc; }
-  .form .btn-primary.raisedss {
+  .form .btn-primary.provider_btn {
     padding: 5px 6px;
     width: 40%;
     height: auto;
@@ -5202,7 +5203,7 @@ a:focus {
     margin-left: 100px; }
 
 .btn-primary.raised {
-  box-shadow: 0 4px 0 0 #B24B4D;
+  box-shadow: 0 4px 0 0 #b24b4d;
   background-color: #ff6c6f;
   border-color: #ff6c6f;
   margin-top: 48px;
@@ -5248,14 +5249,17 @@ a:focus {
 .autocomplete-suggestion {
   padding: 2px 5px;
   white-space: nowrap;
-  overflow: hidden; }
+  overflow: hidden;
+  color: grey;
+  font-family: SourceSansPro-Regular;
+  font-size: 16px; }
 
 .autocomplete-selected {
   background: #f0f0f0; }
 
 .autocomplete-suggestions strong {
   font-weight: normal;
-  color: #39f; }
+  color: #ff6c6f; }
 
 .autocomplete-group {
   padding: 2px 5px; }
@@ -5283,34 +5287,6 @@ a:focus {
   background-image: url("../images/Meet the Doctors.jpg");
   width: 100%;
   height: 100%; }
-
-.doc_main {
-  position: relative; }
-  .doc_main .data h2 {
-    position: absolute;
-    top: 200px;
-    left: 20px;
-    font-family: SourceSansPro-Semibold;
-    font-size: 45px; }
-  .doc_main .data .info {
-    font-size: 22px;
-    font-family: SourceSansPro-Regular;
-    position: absolute;
-    left: 20px;
-    top: 300px; }
-  .doc_main .search {
-    position: absolute;
-    background-color: #d6d2d2;
-    width: 63%;
-    padding: 15px 20px;
-    top: 360px;
-    left: 492px; }
-    .doc_main .search .label {
-      font-family: SourceSansPro-Semibold;
-      color: black;
-      padding: 15px;
-      font-size: 22px;
-      font-weight: 300; }
 
 .carousel-control.left, .carousel-control.right {
   background-image: none;
@@ -5359,24 +5335,129 @@ a:focus {
   font-size: 16px;
   box-shadow: 0 3px 0 0 #317866; }
 
+.btn-primary.rais {
+  width: 80%;
+  background-color: #ff6c6f;
+  height: auto;
+  border-color: #ff6c6f;
+  box-shadow: 0 4px 0 0 #b24b4d;
+  font-family: SourceSansPro-Semibold; }
+  .btn-primary.rais .search_doc {
+    font-size: 15px; }
+
+.btn-primary.enquiry {
+  background-color: #53C8AB;
+  color: white;
+  height: auto;
+  border-color: #53C8AB;
+  box-shadow: 0 4px 0 0 #317866; }
+
+.qwe {
+  padding-left: 0px;
+  padding-right: 0px; }
+
+.accordion_doc .pro {
+  font-family: SourceSansPro-Regular;
+  font-size: 18px; }
+.accordion_doc .icon {
+  color: #D6D2D2; }
+
 .hero {
-  background: url('../images/Meet%20the%20Doctors.jpg') no-repeat center center;
+  background: url("../images/Meet%20the%20Doctors.jpg") no-repeat center center;
+  background-repeat: no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
   display: table;
-  width: 100%; }
+  width: 100%;
+  position: relative;
+  height: 447px; }
   .hero .container {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
     display: table-cell;
     text-align: left; }
+    .hero .container .pp {
+      padding-left: 20px;
+      padding-bottom: 11px; }
+      .hero .container .pp .border_doc {
+        border-bottom: 5px solid #ff6c6f;
+        width: 10%;
+        margin-top: -15px;
+        margin-bottom: 10px; }
     .hero .container h2 {
       font-family: SourceSansPro-Semibold;
-      font-size: 45px; }
+      font-size: 45px;
+      margin-bottom: 0; }
     .hero .container p {
-      font-size: 18px; }
+      font-size: 20px;
+      margin-bottom: 0;
+      font-family: SourceSansPro-Regular; }
+    .hero .container .form-group .form-control {
+      width: 100%;
+      height: auto;
+      padding: 8px 12px 10px; }
+    .hero .container .form-group #proc {
+      font-family: SourceSansPro-Semibold;
+      color: black;
+      font-size: 22px;
+      font-weight: 300;
+      padding-bottom: 10px;
+      text-align: center; }
     .hero .container .block {
-      background-color: #d6d2d2; }
+      background-color: #d6d2d2;
+      padding: 5px 15px; }
 
-@media only screen and (min-width: 480px) and (max-width: 640px) {
-  background-color: grey; }
+@media only screen and (max-width: 750px) {
+  .hero {
+    background: grey; }
+    .hero .container .pp {
+      margin-top: 0;
+      text-align: center;
+      padding-left: 0; }
+      .hero .container .pp h2 {
+        font-size: 180%; }
+      .hero .container .pp p {
+        font-size: 15px;
+        margin-top: 3px; }
+      .hero .container .pp .border_doc {
+        border-bottom: 5px solid #ff6c6f;
+        width: 25%;
+        margin: -15px auto 0; }
+    .hero .container .form-group .form-control {
+      width: 100%;
+      margin-left: 0;
+      margin-right: auto;
+      height: 45px; }
+    .hero .container .form-group #proc {
+      font-size: 25px;
+      font-weight: 200;
+      text-align: center;
+      margin: 0 auto;
+      display: block; }
+    .hero .container .form-group .main_button .btn-primary.rais {
+      width: 50%;
+      display: block;
+      margin: 0 auto;
+      height: 45px;
+      margin-top: 10px;
+      margin-bottom: 20px; }
+      .hero .container .form-group .main_button .btn-primary.rais .search_doc {
+        font-size: 18px;
+        font-family: SourceSansPro-Semibold; } }
+
+@media only screen and (max-width: 774px) {
+  .qwe {
+    display: none; }
+  .doctor .thumbnail {
+    height: 321px;
+    width: 271px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0; }
+  .hero .container .form-group #proc {
+    text-align: center;
+    margin: 0 auto; } }
