--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -38,20 +38,21 @@ $icon-font-path: "../fonts/";
 				border-bottom: 1px solid #e5e5e5;
 				width: 100%;
 				margin-left: 2px;
+
 				// margin-bottom: 20px;
 }
 .provider-img {
 				padding: 20px;
+				border-radius: 8px;
 
 				// width: 350px;
 				// height: 300px;
 }
 .provider-info {
 				h3 {
-
 								margin-top: 26px;
-								font-family:SourceSansPro-Bold;
-								font-size:22px;
+								font-family: SourceSansPro-Bold;
+								font-size: 22px;
 				}
 				p {
 								text-align: justify;
@@ -60,15 +61,15 @@ $icon-font-path: "../fonts/";
 								margin-left: 0;
 								margin-right: 20px;
 								font-family: SourceSansPro-Regular;
-								font-size:14px;
-								padding-bottom: 0px;
-								margin-bottom: 0px;
+								font-size: 14px;
+								padding-bottom: 0;
+								margin-bottom: 0;
 				}
-				.btn-primary.raisedsss {
+				.btn-primary.providers_btn {
 								margin-top: 41px;
 								background-color: #ff6c6f;
 								border-color: #ff6c6f;
-								box-shadow: 0 4px 0 0 #B24B4D;
+								box-shadow: 0 4px 0 0 #b24b4d;
 								margin-bottom: 10px;
 								outline: none;
 								font-family: SourceSansPro-Semibold;
@@ -211,7 +212,7 @@ $icon-font-path: "../fonts/";
 // }
 .doc {
 				margin-top: 45px;
-				height: 350px;
+				height: 447px;
 
 				// border-bottom:2px solid #e5e5e5;
 				padding-bottom: 40px;
@@ -283,7 +284,7 @@ $icon-font-path: "../fonts/";
 								// 				margin-left: 30px;
 								// }
 				}
-				.btn-primary.raisedss {
+				.btn-primary.provider_btn {
 								padding: 5px 6px;
 								width: 40%;
 								height: auto;
@@ -392,12 +393,13 @@ a:focus {
 				}
 }
 .btn-primary.raised {
-				box-shadow: 0 4px 0 0 #B24B4D;
+				box-shadow: 0 4px 0 0 #b24b4d;
 				background-color: #ff6c6f;
 				border-color: rgb(255,108,111);
 				margin-top: 48px;
 				font-family: SourceSansPro-Semibold;
 				font-size: 16px;
+
 }
 .btn-primary.raised.active {
 				outline: none;
@@ -407,8 +409,6 @@ a:focus {
 				box-shadow: 0 4px 0 0 rgb(223,95,105);
 				border-color: rgb(255,108,111);
 }
-
-
 .spec {
 
 }
@@ -454,13 +454,17 @@ a:focus {
 				padding: 2px 5px;
 				white-space: nowrap;
 				overflow: hidden;
+				color: grey;
+				font-family: SourceSansPro-Regular;
+				font-size: 16px;
 }
 .autocomplete-selected {
 				background: #f0f0f0;
 }
 .autocomplete-suggestions strong {
 				font-weight: normal;
-				color: #39f;
+				color: rgb(255,108,111);
+				// color: #39f;
 }
 .autocomplete-group {
 				padding: 2px 5px;
@@ -499,52 +503,54 @@ a:focus {
 }
 
 //doctors main picture!!!!!!!!!!!!!!!!!!!!
-.doc_main {
-				position: relative;
-				.data {
-								h2 {
-												position: absolute;
-												top: 200px;
-												left: 20px;
-												font-family: SourceSansPro-Semibold;
-												font-size: 45px;
-								}
-								.info {
-												font-size: 22px;
-												font-family: SourceSansPro-Regular;
-												position: absolute;
-												left: 20px;
-												top: 300px;
-
-												// p {
-												// 				top: 300px;
-												//
-												// }
-												// #spec {
-												// 				top: 330px;
-												//
-												// }
-								}
-				}
-				.search {
-								 position: absolute;
-								background-color: rgb(214, 210, 210);
-								// z-index: 999px;
-								width: 63%;
-								padding: 15px 20px;
-								top: 360px;
-								left: 492px;
-								.label {
-												font-family: SourceSansPro-Semibold;
-												color: black;
-												padding: 15px;
-												font-size: 22px;
-												font-weight: 300;
-												// position: relative;
-												// top: 2px;
-								}
-				}
-}
+// .doc_main {
+// 				position: relative;
+// 				.data {
+// 								h2 {
+// 												position: absolute;
+// 												top: 200px;
+// 												left: 20px;
+// 												font-family: SourceSansPro-Semibold;
+// 												font-size: 45px;
+// 								}
+// 								.info {
+// 												font-size: 22px;
+// 												font-family: SourceSansPro-Regular;
+// 												position: absolute;
+// 												left: 20px;
+// 												top: 300px;
+//
+// 												// p {
+// 												// 				top: 300px;
+// 												//
+// 												// }
+// 												// #spec {
+// 												// 				top: 330px;
+// 												//
+// 												// }
+// 								}
+// 				}
+// 				.search {
+// 								position: absolute;
+// 								background-color: rgb(214, 210, 210);
+//
+// 								// z-index: 999px;
+// 								width: 63%;
+// 								padding: 15px 20px;
+// 								top: 360px;
+// 								left: 492px;
+// 								.label {
+// 												font-family: SourceSansPro-Semibold;
+// 												color: black;
+// 												padding: 15px;
+// 												font-size: 22px;
+// 												font-weight: 300;
+//
+// 												// position: relative;
+// 												// top: 2px;
+// 								}
+// 				}
+// }
 .carousel-control.left,
 .carousel-control.right {
 				background-image: none;
@@ -601,35 +607,199 @@ a:focus {
 				font-size: 16px;
 				box-shadow: 0 3px 0 0 #317866;
 }
+.btn-primary.rais {
+				width: 80%;
+				background-color: #ff6c6f;
+				height: auto;
+				border-color: #ff6c6f;
+				box-shadow: 0 4px 0 0 #b24b4d;
+				font-family: SourceSansPro-Semibold;
 
-
-.hero {
-    background: url('../images/Meet%20the%20Doctors.jpg') no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    display: table;
-    width: 100%;
-    .container {
-        h2 {
-            // font-weight: bold;
-						font-family: SourceSansPro-Semibold;
-						font-size: 45px;
-        }
-        p{
-         font-size: 18px;
-        }
-        display: table-cell;
-        text-align: left;
-        //        vertical-align: middle;
-//        height: 447px;
-        .block{
-         background-color: rgb(214, 210, 210);
-        }
-    }
+				// margin-left:30px;
+				.search_doc {
+								font-size: 15px;
+				}
 }
+.btn-primary.enquiry{
+	background-color:#53C8AB;
+	color:white;
+	// width:100%;
+	height:auto;
+	border-color:#53C8AB;
+	box-shadow: 0 4px 0 0 #317866;
+}
+.qwe{
+	padding-left: 0px;
+	padding-right: 0px;
+}
+.accordion_doc{
+	.pro{
+		font-family:SourceSansPro-Regular;
+		font-size:18px;
+	}
+.icon{
+	color:#D6D2D2;
+}
+}
+.hero {
+				background: url("../images/Meet%20the%20Doctors.jpg")no-repeat center center;
+				background-repeat: no-repeat;
+				-webkit-background-size: cover;
+				-moz-background-size: cover;
+				-o-background-size: cover;
+				background-size: cover;
+				display: table;
+				width: 100%;
+				position: relative;
+				height: 447px;
+				.container {
+								position: absolute;
+								bottom: 0;
+								left: 0;
+								width: 100%;
+								.pp {
 
-	@media only screen and (min-width:480px) and (max-width: 640px)  {
-	background-color: grey;
+												//margin-top: 225px;
+												padding-left: 20px;
+												padding-bottom: 11px;
+												.border_doc {
+																border-bottom: 5px solid #ff6c6f;
+																width: 10%;
+																margin-top: -15px;
+																margin-bottom: 10px;
+												}
+								}
+								h2 {
+
+												// font-weight: bold;
+												font-family: SourceSansPro-Semibold;
+												font-size: 45px;
+												margin-bottom: 0;
+								}
+								p {
+												font-size: 20px;
+												margin-bottom: 0;
+												font-family: SourceSansPro-Regular;
+												// font-size:16px;
+								}
+								.form-group {
+												.form-control {
+
+																// margin-left: -50px;
+																width: 100%;
+																height: auto;
+																padding: 8px 12px 10px;
+
+																// color:red;
+												}
+												// .autocomplete-suggestions  {
+												// 				color: #39f;
+												// 				font-weight: normal;
+												// }
+												#proc {
+																font-family: SourceSansPro-Semibold;
+																color: black;
+																font-size: 22px;
+																font-weight: 300;
+																padding-bottom: 10px;
+																text-align: center;
+												}
+								}
+								display: table-cell;
+								text-align: left;
+
+								//        vertical-align: middle;
+								//        height: 447px;
+								.block {
+												background-color: rgb(214, 210, 210);
+												padding: 5px 15px;
+								}
+				}
+}
+@media only screen and (max-width: 750px) {
+				.hero {
+								background: grey;
+								.container {
+												.pp {
+																margin-top: 0;
+																text-align: center;
+																padding-left: 0;
+																h2 {
+																				font-size: 180%;
+																}
+																p {
+																				font-size: 15px;
+																				margin-top: 3px;
+
+																}
+																.border_doc {
+																				border-bottom: 5px solid #ff6c6f;
+																				width: 25%;
+																				margin: -15px auto 0;
+
+																				// margin-top: -15px;
+																				// margin-bottom: 10px;
+																				// margin-left:220px;
+																}
+												}
+												.form-group {
+																.form-control {
+																				width: 100%;
+																				margin-left: 0;
+																				margin-right: auto;
+																				height: 45px;
+																}
+																#proc {
+																				font-size: 25px;
+																				font-weight: 200;
+																				text-align: center;
+																				margin: 0 auto;
+																				display: block;
+																}
+																.main_button {
+
+																				// margin: 0 auto;
+																				// display: block;
+																				.btn-primary.rais {
+																								width: 50%;
+																								display: block;
+																								margin: 0 auto;
+																								height: 45px;
+																								margin-top: 10px;
+																								margin-bottom: 20px;
+																								.search_doc {
+																												font-size: 18px;
+																												font-family: SourceSansPro-Semibold;
+
+																												// width: 100%;
+																								}
+																				}
+																}
+												}
+								}
+				}
+}
+@media only screen and (max-width: 774px) {
+				.qwe {
+								display: none;
+				}
+				.doctor {
+
+								// width: 271px;
+								.thumbnail {
+												height: 321px;
+												width: 271px;
+												margin-left: auto;
+												margin-right: auto;
+												padding-left: 0;
+
+
+								}
+				}
+				.hero .container .form-group #proc {
+								text-align: center;
+								margin: 0 auto;
+
+								// margin-left: 200px;
+				}
 }
