--- a/Gmt/templates/views/doctor.hbs
+++ b/Gmt/templates/views/doctor.hbs
@@ -2,7 +2,7 @@
 <div class="row procedure">
 	<div class="col-lg-8 border no-padding">
 
-		<div class="row doc">
+		<div class="row doc" >
 			<div class="col-lg-1">
 			</div>
 			<div class="col-lg-3">
@@ -24,17 +24,17 @@
 				<ul class="nav navbar-nav row" style="padding-top: 8px;">
 					<li class="col-lg-1">&nbsp;</li>
 					<li class="col-lg-2"><a href="#bio">Bio</a></li>
-					<li class="col-lg-3" ><a href="#education">Education</a></li>
-					<li class="col-lg-3"><a href="#awards" style="margin-left:7px;" >Awards</a></li>
+					<li class="col-lg-3" ><a href="#procedures">Procedure</a></li>
+					<li class="col-lg-3"><a href="#providers" style="margin-left:7px;" >Providers</a></li>
 					<li class="col-lg-2"><a href="#reviews" >Reviews</a></li>
 				</ul>
 			</nav>
 
 			<h4 id="bio"></h4>
-			<div class="row">
+			<!-- <div class="row">
 				<div class="col-lg-1">
 				</div>
-				<div class="col-lg-1">
+				<div class="col-lg-10">
 
 					{{#each provider}}
 						<p>
@@ -44,18 +44,98 @@
 				</div>
 				<div class="col-lg-1">
 				</div>
+			</div> -->
+			<h4 id="procedures">
+				<div class="row">
+					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+					</div>
+		<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
+				<span >Procedures</span>
 			</div>
-			<h4 id="education">
-				<span>Education</span>
+				<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8">
+				</div>
+			</div>
 			</h4>
+			<div class="row">
+				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+				</div>
+				<div class="col-lg-10" style="border:1px solid #e5e5e5;border-radius:4px;margin-top:20px">
+					<div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+				{{#each procedures}}
+
+						<div class="panel panel-default">
+							<div class="panel-heading" role="tab" id="headingOne">
+								<h4 class="panel-title">
+									<a role="button" data-toggle="collapse" data-parent="#accordion" href="#{{key}}" aria-expanded="false" aria-controls="collapseOne">
+										<div class="row accordion" >
+											<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8 title">
+												{{name}}
+												<!-- <span class="fa fa-plus-square-o"></span> -->
+											</div>
+											<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2 price">
+												{{price}}
+											</div>
+											<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+												<input class="btn btn-default" type="submit" value="Enquiry" style="background-color:#FF6C6F;color:white">
+											</div>
+										</div>
+									</a>
+								</h4>
+								</div>
+								<div id="{{key}}" class="panel-collapse collapse " role="tabpanel" aria-labelledby="headingOne">
+									<div class="panel-body">
+										{{{description}}}
+									</div>
+								</div>
+							</div>
+
+				{{/each}}
+				</div>
+			</div>
+				<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+				</div>
+				</div>
 			<h3 style="margin-left: 60px;font-size:18px;">{{{doctor.description}}}</h3>
-			<h4 id="awards" style="">
-				<span>Awards</span>
+			<h4 id="providers" style="">
+				<div class="row">
+					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+					</div>
+		<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
+				<span >Affiliated Providers</span>
+			</div>
+				<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8">
+				</div>
+			</div>
 			</h4>
+			{{#each providers}}
+				<div class="row procedure-box ">
+					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+					</div>
+					<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
+						<img src="" >
+					</div>
+					<div class="col-lg-5 col-sm-5 col-xs-5 col-md-5">
+						<h3>{{name}}</h3>
+						<button type="button" class="btn btn-primary btn-md raised">Know More</button>
+						<!-- <a href=""><p>Know More</p></a> -->
+						<!-- <button type="button" class="bttn" onclick=location.href="/provider_info/">Know More</button> -->
+					</div>
+					<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+					</div>
+				</div>
+			{{/each}}
 			<h4 id="reviews" style="">
-				<span>Reviews</span>
+				<div class="row">
+					<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+					</div>
+		<div class="col-lg-3 col-sm-3 col-xs-3 col-md-3">
+				<span >Reviews</span>
+			</div>
+				<div class="col-lg-8 col-sm-8 col-xs-8 col-md-8">
+				</div>
+			</div>
 			</h4>
-			<span class="glyphicon glyphicon-star" style="margin-left:30px"></span>
+			<!-- <span class="glyphicon glyphicon-star" style="margin-left:30px"></span>
 			<span class="glyphicon glyphicon-star"></span>
 			<span class="glyphicon glyphicon-star"></span>
 			<p style="margin-left: 30px;">Lorem Ipsum,</p>
@@ -63,7 +143,7 @@
 			<p style="margin-left: 30px;">jjjajjaa ahnf go away somehwhere, best care and</p>
 			<p style="margin-left: 30px;">help all over.</p>
 
-			<button type="submit" class="btn btn-default" style="margin-left:30px; ">Write a review</button>
+			<button type="submit" class="btn btn-default" style="margin-left:30px; ">Write a review</button> -->
 		</div>
 	</div>
 	<div class="col-lg-4 no-padding name">
@@ -98,7 +178,7 @@
 					<textarea class="textarea" name="message" rows="5" placeholder="Questions/Comments"></textarea>
 				</div>
 				<br>
-				<input type="submit" value="Consultation" class="button" style="" />
+				<input type="submit" value="Consultation" class="btn btn-primary btn-md provider_btn" style="" />
 			</form>
 			{{#if consultationSent}}
 				<br>
