--- a/Gmt/templates/views/provider.hbs
+++ b/Gmt/templates/views/provider.hbs
@@ -84,12 +84,12 @@
 								{{{description}}}
 
 							</div>
-							<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
+							<div class="col-lg-2 col-sm-3 col-xs-2 col-md-2">
 
 								<!-- <input type="text" class="form-control" id="text" value="View Profile"> -->
 								<a href="" id="link" style="">View Profile</a>
 							</div>
-							<div class="col-lg-1 col-sm-1 col-xs-1 col-md-1">
+							<div class="col-lg-1 col-sm-0 col-xs-1 col-md-1">
 							</div>
 						</div>
 					{{/each}}
@@ -127,7 +127,7 @@
 													{{price}}
 												</div>
 												<div class="col-lg-2 col-sm-2 col-xs-2 col-md-2">
-													<input class="btn btn-default" type="submit" value="Enquiry" style="background-color:#FF6C6F;color:white">
+													<input class="btn btn-primary btn-md procedure_btn" type="submit" value="Enquiry" style="background-color:#FF6C6F;color:white">
 												</div>
 											</div>
 										</a>
@@ -161,14 +161,14 @@
 					</div>
 				</div>
 			</h4>
-			<span class="glyphicon glyphicon-star" style="margin-left:30px"></span>
+			<!-- <span class="glyphicon glyphicon-star" style="margin-left:30px"></span>
 			<span class="glyphicon glyphicon-star"></span>
 			<span class="glyphicon glyphicon-star"></span>
 			<p style="margin-left: 30px;">Lorem Ipsum,</p>
 			<p style="margin-left: 30px;">dolor ahajfnnsnsAMnkjndj janangfgbdbd</p>
 			<p style="margin-left: 30px;">jjjajjaa ahnf go away somehwhere, best care and</p>
 			<p style="margin-left: 30px;">help all over.</p>
-			<button type="submit" class="btn btn-default" style="margin-left:30px; ">Write a review</button>
+			<button type="submit" class="btn btn-default" style="margin-left:30px; ">Write a review</button> -->
 		</div>
 	</div>
 	<div class="col-lg-4 col-sm-4 col-xs-4 col-md-4 no-padding name">
@@ -203,7 +203,7 @@
 							<textarea class="textarea" name="message" rows="5" placeholder="Questions/Comments"></textarea>
 						</div>
 						<br>
-						<input type="submit" value="Enquire" class="btn btn-primary btn-md raisedss" style="" />
+						<input type="submit" value="Enquire" class="btn btn-primary btn-md provider_btn" style="" />
 						<!-- <button type="submit" class="button">Enquire</button> -->
 					</form>
 					{{#if enquirySent}}
@@ -217,5 +217,6 @@
 			</div>
 		</div>
 	</div>
+	
 </div>
 <!-- </div> -->
