--- a/Gmt/templates/views/providers.hbs
+++ b/Gmt/templates/views/providers.hbs
@@ -11,7 +11,7 @@
 						<h3 style="">{{name}}</h3>
 
 							{{{summary}}}
-							<button type="button" class="btn btn-primary btn-md raisedsss" onclick="location.href='/provider/{{key}}'">Know More</button>
+							<button type="button" class="btn btn-primary btn-md providers_btn" onclick="location.href='/provider/{{key}}'" style="outline:none;">Know More</button>
 
 
 					</div>
