--- a/Gmt/public/styles/site.scss
+++ b/Gmt/public/styles/site.scss
@@ -77,11 +77,11 @@ $icon-font-path: "../fonts/";
 				}
 }
 .q {
-				height: 400px;
+				height: auto;
 }
 .p {
 				height: 350px;
-				overflow-y: scroll;
+				overflow-y: auto;
 				overflow-x: hidden;
 }
 .navbar-default {
@@ -119,6 +119,7 @@ $icon-font-path: "../fonts/";
 				}
 }
 .procedure {
+				overflow: hidden;
 				margin: 0;
 				.border {
 								border-right: 2px solid #e5e5e5;
@@ -141,11 +142,13 @@ $icon-font-path: "../fonts/";
 #speciality,
 #reviews {
 				border-top: 2px solid #e5e5e5;
+				padding-top:10px;
 				span {
 								position: relative;
 								top: 10px;
 								font-family: SourceSansPro-Semibold;
 								font-size: 18px;
+
 				}
 }
 #bio {
@@ -158,6 +161,7 @@ $icon-font-path: "../fonts/";
 }
 .procedure-box {
 				margin-top: 40px;
+				padding-bottom: 20px;
 				h3 {
 								margin-top: 0;
 								width: 100%;
@@ -175,6 +179,18 @@ $icon-font-path: "../fonts/";
 								outline: none;
 								text-decoration: none;
 				}
+}
+.btn-primary.raised {
+				box-shadow: 0 4px 0 0 #b24b4d;
+				background-color: #ff6c6f;
+				border-color: rgb(255,108,111);
+				margin-top: 48px;
+				font-family: SourceSansPro-Semibold;
+				font-size: 16px;
+}
+.btn-primary.raised.active {
+				outline: none;
+				box-shadow: none;
 }
 .proc {
 				margin-top: 45px;
@@ -203,43 +219,31 @@ $icon-font-path: "../fonts/";
 				text-decoration: none;
 }
 
-// #text {
-// 				width: 105px;
-// 				border-color: rgb(137,216,196);
-// 				margin-top: 50px;
-// 				margin-left: -100px;
-// 				color: rgb(137,216,196);
-// }
 .doc {
 				margin-top: 45px;
 				height: 447px;
-
-				// border-bottom:2px solid #e5e5e5;
 				padding-bottom: 40px;
-
-				// margin-left: 40px;
-				// width: 843px;
 				img {
 								width: 180px;
 								height: 180px;
 								border-radius: 50%;
 
-								// margin-top: -10px;
 				}
 				h3 {
-
-								// margin-top: 50px;
+          font-family: SourceSansPro-Semibold;
+					font-size: 30px;
 				}
 
-				// p {
-				// 				margin-left: 0;
-				// 				margin-top: 20px;
-				// }
+        p{
+					font-family: SourceSansPro-Regular;
+					font-size:16px;
+				}
 				#text {
 								margin-top: 40px;
 								margin-left: 0;
 				}
 }
+
 .name {
 				h3 {
 								background-color: #ededed;
@@ -392,25 +396,33 @@ a:focus {
 								margin-left: 100px;
 				}
 }
-.btn-primary.raised {
-				box-shadow: 0 4px 0 0 #b24b4d;
-				background-color: #ff6c6f;
-				border-color: rgb(255,108,111);
-				margin-top: 48px;
-				font-family: SourceSansPro-Semibold;
-				font-size: 16px;
 
-}
-.btn-primary.raised.active {
-				outline: none;
-				box-shadow: none;
-}
 .btn-primary.raiseds {
 				box-shadow: 0 4px 0 0 rgb(223,95,105);
 				border-color: rgb(255,108,111);
 }
+// .btn-primary.provider_btn {
+// 				box-shadow: 0 4px 0 0 rgb(223,95,105);
+// 				border-color: rgb(255,108,111);
+// 				background-color: #ff6c6f;
+// }
+.btn-primary.enquire {
+				box-shadow: 0 4px 0 0 rgb(223,95,105);
+				border-color: rgb(255,108,111);
+				background-color: #ff6c6f;
+				width: 50%;
+				height: auto;
+}
 .spec {
 
+}
+.doc_proc{
+	padding-bottom: 20px;
+	.doc_border{
+		border:1px solid #e5e5e5;
+		border-radius:4px;
+		margin-top:20px;
+	}
 }
 .panel-default {
 				border-width: 0;
@@ -430,9 +442,27 @@ a:focus {
 																padding-top: 5px;
 																text-align: right;
 												}
-												.btn-default {
-																padding-top: 4px;
+
+												.btn-primary.procedure_btn {
+																background-color: #ff6c6f;
+																color: white;
+                                font-size:16px;
+																font-family: SourceSansPro-Regular;
+																height: auto;
+																padding: 3px 12px;
+																border-color: #ff6c6f;
+																box-shadow: 0 4px 0 0 #b24b4d;
 												}
+												.btn-primary.doc_btn {
+																background-color: #53c8ab;
+																color: white;
+																font-size:16px;
+																font-family: SourceSansPro-Regular;
+																height: auto;
+																border-color: #53c8ab;
+																box-shadow: 0 4px 0 0 #317866;
+												}
+
 								}
 				}
 				.panel-body {
@@ -441,10 +471,7 @@ a:focus {
 								font-family: SourceSansPro-Regular;
 				}
 }
-.thumbnail {
-				height: auto;
-				width: auto;
-}
+
 .autocomplete-suggestions {
 				border: 1px solid #999;
 				background: #fff;
@@ -464,6 +491,7 @@ a:focus {
 .autocomplete-suggestions strong {
 				font-weight: normal;
 				color: rgb(255,108,111);
+
 				// color: #39f;
 }
 .autocomplete-group {
@@ -496,72 +524,17 @@ a:focus {
 								font-size: 16px;
 				}
 }
-.jumbotron {
-				background-image: url("../images/Meet the Doctors.jpg");
-				width: 100%;
-				height: 100%;
-}
-
-//doctors main picture!!!!!!!!!!!!!!!!!!!!
-// .doc_main {
-// 				position: relative;
-// 				.data {
-// 								h2 {
-// 												position: absolute;
-// 												top: 200px;
-// 												left: 20px;
-// 												font-family: SourceSansPro-Semibold;
-// 												font-size: 45px;
-// 								}
-// 								.info {
-// 												font-size: 22px;
-// 												font-family: SourceSansPro-Regular;
-// 												position: absolute;
-// 												left: 20px;
-// 												top: 300px;
-//
-// 												// p {
-// 												// 				top: 300px;
-// 												//
-// 												// }
-// 												// #spec {
-// 												// 				top: 330px;
-// 												//
-// 												// }
-// 								}
-// 				}
-// 				.search {
-// 								position: absolute;
-// 								background-color: rgb(214, 210, 210);
-//
-// 								// z-index: 999px;
-// 								width: 63%;
-// 								padding: 15px 20px;
-// 								top: 360px;
-// 								left: 492px;
-// 								.label {
-// 												font-family: SourceSansPro-Semibold;
-// 												color: black;
-// 												padding: 15px;
-// 												font-size: 22px;
-// 												font-weight: 300;
-//
-// 												// position: relative;
-// 												// top: 2px;
-// 								}
-// 				}
+// .jumbotron {
+// 				background-image: url("../images/Meet the Doctors.jpg");
+// 				width: 100%;
+// 				height: 100%;
 // }
+
 .carousel-control.left,
 .carousel-control.right {
 				background-image: none;
 				color: #cdcaca;
 }
-
-// .mtd {
-// 				position: relative;
-// 				width: 100%;
-// 				/* for IE 6 */
-// }
 .specialities {
 				background-color: rgb(214, 210, 210);
 				color: black;
@@ -576,6 +549,8 @@ a:focus {
 				.thumbnail {
 								border-bottom-width: 0;
 								margin-top: 30px;
+								height: auto;
+								width: auto;
 								.doct {
 												border-radius: 50%;
 												width: 160px;
@@ -614,32 +589,23 @@ a:focus {
 				border-color: #ff6c6f;
 				box-shadow: 0 4px 0 0 #b24b4d;
 				font-family: SourceSansPro-Semibold;
-
-				// margin-left:30px;
 				.search_doc {
 								font-size: 15px;
 				}
 }
-.btn-primary.enquiry{
-	background-color:#53C8AB;
-	color:white;
-	// width:100%;
-	height:auto;
-	border-color:#53C8AB;
-	box-shadow: 0 4px 0 0 #317866;
+
+.qwe {
+				padding-left: 0;
+				padding-right: 0;
 }
-.qwe{
-	padding-left: 0px;
-	padding-right: 0px;
-}
-.accordion_doc{
-	.pro{
-		font-family:SourceSansPro-Regular;
-		font-size:18px;
-	}
-.icon{
-	color:#D6D2D2;
-}
+.accordion_doc {
+				.pro {
+								font-family: SourceSansPro-Regular;
+								font-size: 18px;
+				}
+				.icon {
+								color: #d6d2d2;
+				}
 }
 .hero {
 				background: url("../images/Meet%20the%20Doctors.jpg")no-repeat center center;
@@ -658,10 +624,8 @@ a:focus {
 								left: 0;
 								width: 100%;
 								.pp {
-
-												//margin-top: 225px;
-												padding-left: 20px;
-												padding-bottom: 11px;
+											padding-left: 20px;
+											padding-bottom: 11px;
 												.border_doc {
 																border-bottom: 5px solid #ff6c6f;
 																width: 10%;
@@ -670,8 +634,6 @@ a:focus {
 												}
 								}
 								h2 {
-
-												// font-weight: bold;
 												font-family: SourceSansPro-Semibold;
 												font-size: 45px;
 												margin-bottom: 0;
@@ -680,36 +642,28 @@ a:focus {
 												font-size: 20px;
 												margin-bottom: 0;
 												font-family: SourceSansPro-Regular;
-												// font-size:16px;
+
+
 								}
 								.form-group {
+									padding: 0px 0px 0px 15px;
 												.form-control {
-
-																// margin-left: -50px;
 																width: 100%;
 																height: auto;
 																padding: 8px 12px 10px;
-
-																// color:red;
+																margin-left: 3px;
 												}
-												// .autocomplete-suggestions  {
-												// 				color: #39f;
-												// 				font-weight: normal;
-												// }
 												#proc {
 																font-family: SourceSansPro-Semibold;
 																color: black;
 																font-size: 22px;
 																font-weight: 300;
 																padding-bottom: 10px;
-																text-align: center;
+
 												}
 								}
 								display: table-cell;
 								text-align: left;
-
-								//        vertical-align: middle;
-								//        height: 447px;
 								.block {
 												background-color: rgb(214, 210, 210);
 												padding: 5px 15px;
@@ -730,7 +684,6 @@ a:focus {
 																p {
 																				font-size: 15px;
 																				margin-top: 3px;
-
 																}
 																.border_doc {
 																				border-bottom: 5px solid #ff6c6f;
@@ -792,8 +745,6 @@ a:focus {
 												margin-left: auto;
 												margin-right: auto;
 												padding-left: 0;
-
-
 								}
 				}
 				.hero .container .form-group #proc {
@@ -802,4 +753,7 @@ a:focus {
 
 								// margin-left: 200px;
 				}
+}
+.form-horizontal{
+	margin-top:20px;
 }
