--- a/Gmt/templates/views/doctors.hbs
+++ b/Gmt/templates/views/doctors.hbs
@@ -3,8 +3,7 @@
 <section class="hero">
 	<section class="container">
 		<div class="row pp">
-			<h2>
-				Meet The Doctors</h2>
+			<h2>Meet The Doctors</h2>
 			<span style="border-bottom: 5px solid #ff6c6f;line-height:70px;"></span>
 			<div class="border_doc">&nbsp;</div>
 			<p>Choose the right doctor for your treatment</p>
@@ -17,15 +16,15 @@
 				<form role="form row" method="post">
 					<input type="hidden" name="action" value="search">
 					<div class="form-group">
-						<div class="col-md-2 col-lg-2 col-sm-2 col-xs-12 no-padding">
+						<div class="col-md-2 col-lg-2 col-sm-2 col-xs-12 ">
 							<label id="proc">Procedure:</label>
 						</div>
-						<div class="col-md-7 col-lg-7 col-sm-7 col-xs-12 no-padding" style="color:red">
+						<div class="col-md-7 col-lg-7 col-sm-7 col-xs-12 ">
 
 							<input type="text" name="procedure" class="form-control" id="procedure" placeholder="Procedure">
-							<input type="hidden" id="procedureId" name="procedureId" value="" style="color:red;">
+							<input type="hidden" id="procedureId" name="procedureId" value="">
 						</div>
-						<div class="col-md-3 col-lg-3 col-sm-3 col-xs-10 no-padding main_button">
+						<div class="col-md-3 col-lg-3 col-sm-3 col-xs-10  main_button">
 							<button type="submit" class="btn btn-primary btn-md rais" style="">
 								<span class="search_doc">Search Doctors</span>
 							</button>
@@ -128,17 +127,14 @@
 						<p>{{name}}</p>
 						<span>{{{summary}}}</span>
 						<!-- <a href="#"> -->
-							<!-- <p style="border: 2px solid rgb(83, 200, 171); color: white;background-color:rgb(83, 200, 171); margin-top: -30px; border-radius: 5px; width: 270px; margin-left: -5px; height: 38px; text-align: center; padding-top: 4px; padding-bottom: 4px; font-family: SourceSansPro-Semibold; font-size: 16px;">View Complete Profile</p> -->
-							<!-- <button type="button" class="bttn" onclick=location.href="/provider_info/">Know More</button> -->
-							<input class="btn btn-primary btn-md raise "  type="submit" value="View Complete Profile" style="outline:none;" onclick="location.href='/doctor/{{key}}'">
+						<!-- <p style="border: 2px solid rgb(83, 200, 171); color: white;background-color:rgb(83, 200, 171); margin-top: -30px; border-radius: 5px; width: 270px; margin-left: -5px; height: 38px; text-align: center; padding-top: 4px; padding-bottom: 4px; font-family: SourceSansPro-Semibold; font-size: 16px;">View Complete Profile</p> -->
+						<!-- <button type="button" class="bttn" onclick=location.href="/provider_info/">Know More</button> -->
+						<input class="btn btn-primary btn-md raise " type="submit" value="View Complete Profile" style="outline:none;" onclick="location.href='/doctor/{{key}}'">
 						<!-- </a> -->
 					</div>
 				</div>
 			{{/each}}
-			<!-- <div class="col-lg-8 col-md-8 col-xs-1 col-sm-8">
-			</div> -->
 		</div>
-
 	</div>
 
 </div>
